--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Chat app" />
+    <meta name="description" content="A website for messaging." />
+    <link rel="apple-touch-icon" href="/logo_512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Chat App</title>
   </head>
